@@ -1,4 +1,5 @@
 
+	* support sync_file_range() on linux
 	* fix issue in write_torrent_file() when file size is exactly piece size
 	* fix file_num_blocks() and file_num_pieces() for empty files
 	* add new overload to make_magnet_uri()
